syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Racing {
  // ListRaces returns a list of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {
    option (google.api.http) = { post: "/v1/list-races", body: "*" };
  }
}

/* Requests/Responses */

// Request for ListRaces call.
message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
  ListRacesRequestSortBy sortBy = 2;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  /*
    "optional" is there to identify wether the json property "visible" is present or not.
    This way it is possible to return the following lists:

    1 - visible:true -> returns only visible races
    2 - visible:false -> returns only NOT visible races
    3 - visible not present -> returns all races regardless of their visibility
  */
  optional bool visible = 2;
}

//
message ListRacesRequestSortBy{
  string property_name = 1;
  bool descending = 2;
}

/* Resources */

enum Status {
  OPEN = 0;
  CLOSED = 1;
}

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  //Status represents the race is either closed or open.
  Status status =7;
}